--- a/Wpf.Ui.SimpleDemo/App.xaml
+++ b/Wpf.Ui.SimpleDemo/App.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:Wpf.Ui.SimpleDemo"
+    xmlns:local1="clr-namespace:Wpf.Ui.SimpleDemo.Views.Login"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     StartupUri="Login.xaml">
     <Application.Resources>
